// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Placeholder renders correctly with type="block" 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    left: -25%;
  }

  to {
    left: 100%;
  }
}

.cache-1ufwzsg {
  position: relative;
  display: block;
  width: 100%;
  overflow: hidden;
  cursor: progress;
}

.cache-131prnr {
  min-height: 200px;
  width: 100%;
  height: 100%;
  padding: 16px;
  border: 1px solid #D4DAE7;
  border-radius: 4px;
  margin: 0;
}

.cache-131prnr>.e12uyvas1:not(:last-child) {
  border-bottom: 1px solid #E6E9F0;
}

.cache-6z7wpg {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 24px 16px;
}

.cache-hxrwfz {
  margin-right: 8px;
  width: 32px;
  height: 32px;
  min-width: 32px;
  border-radius: 12px;
  background-color: #D4DAE7;
}

.cache-70ihor {
  height: 12px;
  width: 120px;
  border-radius: 10px;
  background-color: #D4DAE7;
}

.cache-rqnleh {
  position: absolute;
  top: 0;
  height: 100%;
  width: 25%;
  opacity: 0.8;
  background: linear-gradient(
      90deg,
      rgba(255, 255, 255, 0),
      rgba(255, 255, 255, 0.3),
      rgba(255, 255, 255, 0.4),
      rgba(255, 255, 255, 0.3),
      rgba(255, 255, 255, 0)
    );
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
}

@media (prefers-reduced-motion: reduce) {
  .cache-rqnleh {
    -webkit-animation: unset;
    animation: unset;
  }
}

<div
    class="e3aa5lq1 cache-1ufwzsg"
  >
    <ul
      class="cache-131prnr e12uyvas0"
    >
      <li
        class="cache-6z7wpg e12uyvas1"
      >
        <div
          class="cache-hxrwfz eki2pl50"
        />
        <div
          class="cache-70ihor e15slp7a0"
        />
      </li>
      <li
        class="cache-6z7wpg e12uyvas1"
      >
        <div
          class="cache-hxrwfz eki2pl50"
        />
        <div
          class="cache-70ihor e15slp7a0"
        />
      </li>
      <li
        class="cache-6z7wpg e12uyvas1"
      >
        <div
          class="cache-hxrwfz eki2pl50"
        />
        <div
          class="cache-70ihor e15slp7a0"
        />
      </li>
    </ul>
    <div
      class="cache-rqnleh e3aa5lq0"
    />
  </div>
</DocumentFragment>
`;

exports[`Placeholder renders correctly with type="blocks" 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    left: -25%;
  }

  to {
    left: 100%;
  }
}

.cache-1ufwzsg {
  position: relative;
  display: block;
  width: 100%;
  overflow: hidden;
  cursor: progress;
}

.cache-6vc3he {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 16px;
}

.cache-bhcgoc {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 16px;
  border: 1px solid #D4DAE7;
  border-radius: 4px;
  overflow: hidden;
}

.cache-hxrwfz {
  margin-right: 8px;
  width: 32px;
  height: 32px;
  min-width: 32px;
  border-radius: 12px;
  background-color: #D4DAE7;
}

.cache-70ihor {
  height: 12px;
  width: 120px;
  border-radius: 10px;
  background-color: #D4DAE7;
}

.cache-rqnleh {
  position: absolute;
  top: 0;
  height: 100%;
  width: 25%;
  opacity: 0.8;
  background: linear-gradient(
      90deg,
      rgba(255, 255, 255, 0),
      rgba(255, 255, 255, 0.3),
      rgba(255, 255, 255, 0.4),
      rgba(255, 255, 255, 0.3),
      rgba(255, 255, 255, 0)
    );
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
}

@media (prefers-reduced-motion: reduce) {
  .cache-rqnleh {
    -webkit-animation: unset;
    animation: unset;
  }
}

<div
    class="e3aa5lq1 cache-1ufwzsg"
  >
    <div
      class="cache-6vc3he e1g102fr1"
    >
      <div
        class="cache-bhcgoc e1g102fr0"
      >
        <div
          class="cache-hxrwfz eki2pl50"
        />
        <div
          class="cache-70ihor e15slp7a0"
        />
      </div>
      <div
        class="cache-bhcgoc e1g102fr0"
      >
        <div
          class="cache-hxrwfz eki2pl50"
        />
        <div
          class="cache-70ihor e15slp7a0"
        />
      </div>
      <div
        class="cache-bhcgoc e1g102fr0"
      >
        <div
          class="cache-hxrwfz eki2pl50"
        />
        <div
          class="cache-70ihor e15slp7a0"
        />
      </div>
      <div
        class="cache-bhcgoc e1g102fr0"
      >
        <div
          class="cache-hxrwfz eki2pl50"
        />
        <div
          class="cache-70ihor e15slp7a0"
        />
      </div>
      <div
        class="cache-bhcgoc e1g102fr0"
      >
        <div
          class="cache-hxrwfz eki2pl50"
        />
        <div
          class="cache-70ihor e15slp7a0"
        />
      </div>
      <div
        class="cache-bhcgoc e1g102fr0"
      >
        <div
          class="cache-hxrwfz eki2pl50"
        />
        <div
          class="cache-70ihor e15slp7a0"
        />
      </div>
      <div
        class="cache-bhcgoc e1g102fr0"
      >
        <div
          class="cache-hxrwfz eki2pl50"
        />
        <div
          class="cache-70ihor e15slp7a0"
        />
      </div>
      <div
        class="cache-bhcgoc e1g102fr0"
      >
        <div
          class="cache-hxrwfz eki2pl50"
        />
        <div
          class="cache-70ihor e15slp7a0"
        />
      </div>
    </div>
    <div
      class="cache-rqnleh e3aa5lq0"
    />
  </div>
</DocumentFragment>
`;

exports[`Placeholder renders correctly with type="box" 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    left: -25%;
  }

  to {
    left: 100%;
  }
}

.cache-1ufwzsg {
  position: relative;
  display: block;
  width: 100%;
  overflow: hidden;
  cursor: progress;
}

.cache-6vc3he {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 16px;
}

.cache-erbk9v {
  height: 130px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: space-evenly;
  -ms-flex-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  justify-content: space-evenly;
  border: 1px solid #D4DAE7;
  border-radius: 4px;
  overflow: hidden;
}

.cache-hxrwfz {
  margin-right: 8px;
  width: 32px;
  height: 32px;
  min-width: 32px;
  border-radius: 12px;
  background-color: #D4DAE7;
}

.cache-70ihor {
  height: 12px;
  width: 120px;
  border-radius: 10px;
  background-color: #D4DAE7;
}

.cache-rqnleh {
  position: absolute;
  top: 0;
  height: 100%;
  width: 25%;
  opacity: 0.8;
  background: linear-gradient(
      90deg,
      rgba(255, 255, 255, 0),
      rgba(255, 255, 255, 0.3),
      rgba(255, 255, 255, 0.4),
      rgba(255, 255, 255, 0.3),
      rgba(255, 255, 255, 0)
    );
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
}

@media (prefers-reduced-motion: reduce) {
  .cache-rqnleh {
    -webkit-animation: unset;
    animation: unset;
  }
}

<div
    class="e3aa5lq1 cache-1ufwzsg"
  >
    <div
      class="cache-6vc3he e1tgi0mz1"
    >
      <div
        class="cache-erbk9v e1tgi0mz0"
      >
        <div
          class="cache-hxrwfz eki2pl50"
        />
        <div
          class="cache-70ihor e15slp7a0"
        />
      </div>
      <div
        class="cache-erbk9v e1tgi0mz0"
      >
        <div
          class="cache-hxrwfz eki2pl50"
        />
        <div
          class="cache-70ihor e15slp7a0"
        />
      </div>
      <div
        class="cache-erbk9v e1tgi0mz0"
      >
        <div
          class="cache-hxrwfz eki2pl50"
        />
        <div
          class="cache-70ihor e15slp7a0"
        />
      </div>
      <div
        class="cache-erbk9v e1tgi0mz0"
      >
        <div
          class="cache-hxrwfz eki2pl50"
        />
        <div
          class="cache-70ihor e15slp7a0"
        />
      </div>
      <div
        class="cache-erbk9v e1tgi0mz0"
      >
        <div
          class="cache-hxrwfz eki2pl50"
        />
        <div
          class="cache-70ihor e15slp7a0"
        />
      </div>
      <div
        class="cache-erbk9v e1tgi0mz0"
      >
        <div
          class="cache-hxrwfz eki2pl50"
        />
        <div
          class="cache-70ihor e15slp7a0"
        />
      </div>
      <div
        class="cache-erbk9v e1tgi0mz0"
      >
        <div
          class="cache-hxrwfz eki2pl50"
        />
        <div
          class="cache-70ihor e15slp7a0"
        />
      </div>
      <div
        class="cache-erbk9v e1tgi0mz0"
      >
        <div
          class="cache-hxrwfz eki2pl50"
        />
        <div
          class="cache-70ihor e15slp7a0"
        />
      </div>
    </div>
    <div
      class="cache-rqnleh e3aa5lq0"
    />
  </div>
</DocumentFragment>
`;

exports[`Placeholder renders correctly with type="donut" 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    left: -25%;
  }

  to {
    left: 100%;
  }
}

.cache-1ufwzsg {
  position: relative;
  display: block;
  width: 100%;
  overflow: hidden;
  cursor: progress;
}

.cache-zjik7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-kfjcxd {
  height: 206px;
  width: 206px;
  -webkit-transform: rotate(-90deg);
  -moz-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
}

.cache-1egdskg {
  transform-origin: 50% 50%;
  stroke: #D4DAE7;
  stroke-width: 18;
  stroke-linecap: butt;
  fill: none;
}

.cache-pct5nu {
  display: grid;
  list-style: none;
  gap: 16px;
}

.cache-70ihor {
  height: 12px;
  width: 120px;
  border-radius: 10px;
  background-color: #D4DAE7;
}

.cache-rqnleh {
  position: absolute;
  top: 0;
  height: 100%;
  width: 25%;
  opacity: 0.8;
  background: linear-gradient(
      90deg,
      rgba(255, 255, 255, 0),
      rgba(255, 255, 255, 0.3),
      rgba(255, 255, 255, 0.4),
      rgba(255, 255, 255, 0.3),
      rgba(255, 255, 255, 0)
    );
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
}

@media (prefers-reduced-motion: reduce) {
  .cache-rqnleh {
    -webkit-animation: unset;
    animation: unset;
  }
}

<div
    class="e3aa5lq1 cache-1ufwzsg"
  >
    <div
      class="cache-zjik7 e3g0yqe3"
    >
      <svg
        class="cache-kfjcxd e3g0yqe2"
      >
        <circle
          class="cache-1egdskg e3g0yqe1"
          cx="103"
          cy="103"
          r="90"
        />
      </svg>
      <ul
        class="cache-pct5nu e3g0yqe0"
      >
        <li>
          <div
            class="cache-70ihor e15slp7a0"
          />
        </li>
        <li>
          <div
            class="cache-70ihor e15slp7a0"
          />
        </li>
        <li>
          <div
            class="cache-70ihor e15slp7a0"
          />
        </li>
        <li>
          <div
            class="cache-70ihor e15slp7a0"
          />
        </li>
      </ul>
    </div>
    <div
      class="cache-rqnleh e3aa5lq0"
    />
  </div>
</DocumentFragment>
`;

exports[`Placeholder renders correctly with type="line" 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    left: -25%;
  }

  to {
    left: 100%;
  }
}

.cache-1ufwzsg {
  position: relative;
  display: block;
  width: 100%;
  overflow: hidden;
  cursor: progress;
}

.cache-70ihor {
  height: 12px;
  width: 120px;
  border-radius: 10px;
  background-color: #D4DAE7;
}

.cache-rqnleh {
  position: absolute;
  top: 0;
  height: 100%;
  width: 25%;
  opacity: 0.8;
  background: linear-gradient(
      90deg,
      rgba(255, 255, 255, 0),
      rgba(255, 255, 255, 0.3),
      rgba(255, 255, 255, 0.4),
      rgba(255, 255, 255, 0.3),
      rgba(255, 255, 255, 0)
    );
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
}

@media (prefers-reduced-motion: reduce) {
  .cache-rqnleh {
    -webkit-animation: unset;
    animation: unset;
  }
}

<div
    class="e3aa5lq1 cache-1ufwzsg"
  >
    <div
      class="cache-70ihor e15slp7a0"
    />
    <div
      class="cache-rqnleh e3aa5lq0"
    />
  </div>
</DocumentFragment>
`;

exports[`Placeholder renders correctly with type="list" 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    left: -25%;
  }

  to {
    left: 100%;
  }
}

.cache-1ufwzsg {
  position: relative;
  display: block;
  width: 100%;
  overflow: hidden;
  cursor: progress;
}

.cache-1qd1ov4 {
  list-style: none;
  padding: 0;
  margin: 0;
}

.cache-1qd1ov4>.exf86061:nth-of-type(even) {
  background-color: #F6F6F8;
}

.cache-1t7ed8m {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 48px;
  padding: 4px 8px;
}

.cache-70ihor {
  height: 12px;
  width: 120px;
  border-radius: 10px;
  background-color: #D4DAE7;
}

.cache-rqnleh {
  position: absolute;
  top: 0;
  height: 100%;
  width: 25%;
  opacity: 0.8;
  background: linear-gradient(
      90deg,
      rgba(255, 255, 255, 0),
      rgba(255, 255, 255, 0.3),
      rgba(255, 255, 255, 0.4),
      rgba(255, 255, 255, 0.3),
      rgba(255, 255, 255, 0)
    );
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
}

@media (prefers-reduced-motion: reduce) {
  .cache-rqnleh {
    -webkit-animation: unset;
    animation: unset;
  }
}

<div
    class="e3aa5lq1 cache-1ufwzsg"
  >
    <ul
      class="cache-1qd1ov4 exf86060"
    >
      <li
        class="cache-1t7ed8m exf86061"
      >
        <div
          style="width: 240px;"
        >
          <div
            class="cache-70ihor e15slp7a0"
          />
        </div>
        <div
          style="width: 360px;"
        >
          <div
            class="cache-70ihor e15slp7a0"
          />
        </div>
      </li>
      <li
        class="cache-1t7ed8m exf86061"
      >
        <div
          style="width: 240px;"
        >
          <div
            class="cache-70ihor e15slp7a0"
          />
        </div>
        <div
          style="width: 360px;"
        >
          <div
            class="cache-70ihor e15slp7a0"
          />
        </div>
      </li>
    </ul>
    <div
      class="cache-rqnleh e3aa5lq0"
    />
  </div>
</DocumentFragment>
`;

exports[`Placeholder renders correctly with type="slider" 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    left: -25%;
  }

  to {
    left: 100%;
  }
}

.cache-1ufwzsg {
  position: relative;
  display: block;
  width: 100%;
  overflow: hidden;
  cursor: progress;
}

.cache-19gypvq {
  height: 277px;
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 16px;
  overflow: auto;
}

.cache-1s6rpw2 {
  border: 1px solid #D4DAE7;
  border-radius: 4px;
  width: 239px;
  height: 261px;
  overflow: hidden;
}

.cache-1rcguuu {
  border: 1px solid #D4DAE7;
  background-color: #D4DAE7;
  width: 100%;
  height: 33%;
}

.cache-rqnleh {
  position: absolute;
  top: 0;
  height: 100%;
  width: 25%;
  opacity: 0.8;
  background: linear-gradient(
      90deg,
      rgba(255, 255, 255, 0),
      rgba(255, 255, 255, 0.3),
      rgba(255, 255, 255, 0.4),
      rgba(255, 255, 255, 0.3),
      rgba(255, 255, 255, 0)
    );
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
}

@media (prefers-reduced-motion: reduce) {
  .cache-rqnleh {
    -webkit-animation: unset;
    animation: unset;
  }
}

<div
    class="e3aa5lq1 cache-1ufwzsg"
  >
    <div
      class="cache-19gypvq etju4zs2"
    >
      <div
        class="cache-1s6rpw2 etju4zs1"
      >
        <div
          class="cache-1rcguuu etju4zs0"
        />
      </div>
      <div
        class="cache-1s6rpw2 etju4zs1"
      >
        <div
          class="cache-1rcguuu etju4zs0"
        />
      </div>
      <div
        class="cache-1s6rpw2 etju4zs1"
      >
        <div
          class="cache-1rcguuu etju4zs0"
        />
      </div>
      <div
        class="cache-1s6rpw2 etju4zs1"
      >
        <div
          class="cache-1rcguuu etju4zs0"
        />
      </div>
    </div>
    <div
      class="cache-rqnleh e3aa5lq0"
    />
  </div>
</DocumentFragment>
`;

exports[`Placeholder renders default variant 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    left: -25%;
  }

  to {
    left: 100%;
  }
}

.cache-1ufwzsg {
  position: relative;
  display: block;
  width: 100%;
  overflow: hidden;
  cursor: progress;
}

.cache-6vc3he {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 16px;
}

.cache-bhcgoc {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 16px;
  border: 1px solid #D4DAE7;
  border-radius: 4px;
  overflow: hidden;
}

.cache-hxrwfz {
  margin-right: 8px;
  width: 32px;
  height: 32px;
  min-width: 32px;
  border-radius: 12px;
  background-color: #D4DAE7;
}

.cache-70ihor {
  height: 12px;
  width: 120px;
  border-radius: 10px;
  background-color: #D4DAE7;
}

.cache-rqnleh {
  position: absolute;
  top: 0;
  height: 100%;
  width: 25%;
  opacity: 0.8;
  background: linear-gradient(
      90deg,
      rgba(255, 255, 255, 0),
      rgba(255, 255, 255, 0.3),
      rgba(255, 255, 255, 0.4),
      rgba(255, 255, 255, 0.3),
      rgba(255, 255, 255, 0)
    );
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
}

@media (prefers-reduced-motion: reduce) {
  .cache-rqnleh {
    -webkit-animation: unset;
    animation: unset;
  }
}

<div
    class="e3aa5lq1 cache-1ufwzsg"
  >
    <div
      class="cache-6vc3he e1g102fr1"
    >
      <div
        class="cache-bhcgoc e1g102fr0"
      >
        <div
          class="cache-hxrwfz eki2pl50"
        />
        <div
          class="cache-70ihor e15slp7a0"
        />
      </div>
      <div
        class="cache-bhcgoc e1g102fr0"
      >
        <div
          class="cache-hxrwfz eki2pl50"
        />
        <div
          class="cache-70ihor e15slp7a0"
        />
      </div>
      <div
        class="cache-bhcgoc e1g102fr0"
      >
        <div
          class="cache-hxrwfz eki2pl50"
        />
        <div
          class="cache-70ihor e15slp7a0"
        />
      </div>
      <div
        class="cache-bhcgoc e1g102fr0"
      >
        <div
          class="cache-hxrwfz eki2pl50"
        />
        <div
          class="cache-70ihor e15slp7a0"
        />
      </div>
      <div
        class="cache-bhcgoc e1g102fr0"
      >
        <div
          class="cache-hxrwfz eki2pl50"
        />
        <div
          class="cache-70ihor e15slp7a0"
        />
      </div>
      <div
        class="cache-bhcgoc e1g102fr0"
      >
        <div
          class="cache-hxrwfz eki2pl50"
        />
        <div
          class="cache-70ihor e15slp7a0"
        />
      </div>
      <div
        class="cache-bhcgoc e1g102fr0"
      >
        <div
          class="cache-hxrwfz eki2pl50"
        />
        <div
          class="cache-70ihor e15slp7a0"
        />
      </div>
      <div
        class="cache-bhcgoc e1g102fr0"
      >
        <div
          class="cache-hxrwfz eki2pl50"
        />
        <div
          class="cache-70ihor e15slp7a0"
        />
      </div>
    </div>
    <div
      class="cache-rqnleh e3aa5lq0"
    />
  </div>
</DocumentFragment>
`;
